--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
+/* @import url('./vite-promo.css'); */
 @import url('./header.css');
 
 :root {
@@ -22,4 +22,110 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+
+.form {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.input {
+  box-sizing: border-box;
+  width: 272px;
+  height: 40px;
+  padding-left: 16px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  background: #FFF;
+
+}
+
+.input:focus,
+.input:hover {
+  border: 1px solid #4E75FF;
+  background: #FFF;
+  outline: none;
+}
+
+.input::placeholder {
+  color: #808080;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+
+.button {
+  box-sizing: border-box;
+  height: 40px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: none;
+  background: #4E75FF;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.button:focus,
+.button:hover {
+  background: #6C8CFF;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  gap: 24px;
+  max-width: 1440px;
+  padding: 16px;
+}
+
+.gallery-item {
+  width: calc((100% - 72px) / 3);
+  box-shadow: 5px 5px 10px #696969;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.loader {
+  display: block;
+  margin: 0 auto;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.loader.visible {
+  display: none;
+}
+
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
